2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/cardimage/*: New image set for the memory cards. The images are from
	                      Mathieu Ignacio (mignacio at april point org).
	                      They are released under the GPL.
	* src/boards/memory.c: (create_item): fixed to use new image set.

	* src/boards/scale.c: (get_weight_plate), (scale_anim_plate),
	(scale_item_move_to), (scale_drag_event), (scale_list_add_object),
	(scale_next_level), (process_ok): Added a warning at level 2:
	                                  Take care, you can drop masses on both sides of the scale.

2007-03-13  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/clickgame.xml.in: minor, removed resource definition
	* boards/menu.xml.in:
	* src/gcompris/gcompris.c:

	* boards/Makefile.am: splitted geography and geography_country
	* boards/geography.xml.in:
	* boards/geography/Makefile.am:
	* boards/geography/board10_0.xml.in:
	* boards/geography/board5_0.xml.in:
	* boards/geography/board6_0.xml.in:
	* boards/geography/board7_0.xml.in:
	* boards/geography/board8_0.xml.in:
	* boards/geography/board9_0.xml.in:
	* boards/geography/board9_1.xml.in:
	* boards/geography/board9_2.xml.in:
	* boards/geography_country/Makefile.am:
	* configure.in:
	* po/POTFILES.in:

	* boards/scalesboard.xml.in: fixed documentation

	* src/boards/scale.c: (scale_anim_plateau): fixed fuzzy plate by Miguel.

	* src/boards/shapegame.c: (item_event): fixed freeze in dragging in the
	  tooltip by Miguel.


2007-03-13  Yves Combe <yves@ycombe.net>

	Add ScriptExec source (derived from Platipus by inkscape).

	* Makefile.am:
	* configure.in:
	* macosx/Makefile.am:
	* macosx/main.c: (main), (Execute), (OpenDoc), (ExecuteScript),
	(GetParameters), (GetScript), (GetOpenDoc), (LoadMenuBar),
	(FSMakePath), (RedFatalAlert), (DoesFileExist), (AppQuitAEHandler),
	(AppOpenDocAEHandler), (AppOpenAppAEHandler), (X11FailedHandler):

2007-03-13  Bruno coudoin  <bruno.coudoin@free.fr>
