@@ -1,5 +1,9 @@
 2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
+	* src/boards/scale.c: (scale_anim_plate): fixed fuzzy plate by Miguel, now on the right plate.
+
+2007-03-18  Bruno coudoin  <bruno.coudoin@free.fr>
+
 	* boards/cardimage/*: New image set for the memory cards. The images are from
 	                      Mathieu Ignacio (mignacio at april point org).
 	                      They are released under the GPL.
